; ModuleID = '/home/carl/AnghaBench/linux/mm/extr_rmap.c_anon_vma_alloc.c'
source_filename = "/home/carl/AnghaBench/linux/mm/extr_rmap.c_anon_vma_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.anon_vma = type { i32, %struct.anon_vma*, %struct.anon_vma*, i32 }

@anon_vma_cachep = common dso_local global i32 0, align 4
@GFP_KERNEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.anon_vma* ()* @anon_vma_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.anon_vma* @anon_vma_alloc() #0 {
  %1 = alloca %struct.anon_vma*, align 8
  %2 = load i32, i32* @anon_vma_cachep, align 4
  %3 = load i32, i32* @GFP_KERNEL, align 4
  %4 = call %struct.anon_vma* @kmem_cache_alloc(i32 %2, i32 %3)
  store %struct.anon_vma* %4, %struct.anon_vma** %1, align 8
  %5 = load %struct.anon_vma*, %struct.anon_vma** %1, align 8
  %6 = icmp ne %struct.anon_vma* %5, null
  br i1 %6, label %7, label %19

7:                                                ; preds = %0
  %8 = load %struct.anon_vma*, %struct.anon_vma** %1, align 8
  %9 = getelementptr inbounds %struct.anon_vma, %struct.anon_vma* %8, i32 0, i32 3
  %10 = call i32 @atomic_set(i32* %9, i32 1)
  %11 = load %struct.anon_vma*, %struct.anon_vma** %1, align 8
  %12 = getelementptr inbounds %struct.anon_vma, %struct.anon_vma* %11, i32 0, i32 0
  store i32 1, i32* %12, align 8
  %13 = load %struct.anon_vma*, %struct.anon_vma** %1, align 8
  %14 = load %struct.anon_vma*, %struct.anon_vma** %1, align 8
  %15 = getelementptr inbounds %struct.anon_vma, %struct.anon_vma* %14, i32 0, i32 2
  store %struct.anon_vma* %13, %struct.anon_vma** %15, align 8
  %16 = load %struct.anon_vma*, %struct.anon_vma** %1, align 8
  %17 = load %struct.anon_vma*, %struct.anon_vma** %1, align 8
  %18 = getelementptr inbounds %struct.anon_vma, %struct.anon_vma* %17, i32 0, i32 1
  store %struct.anon_vma* %16, %struct.anon_vma** %18, align 8
  br label %19

19:                                               ; preds = %7, %0
  %20 = load %struct.anon_vma*, %struct.anon_vma** %1, align 8
  ret %struct.anon_vma* %20
}

declare dso_local %struct.anon_vma* @kmem_cache_alloc(i32, i32) #1

declare dso_local i32 @atomic_set(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
